chore(videojs-resumecard): Update `seconds` property to `time`.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     bigPlayButton: false,
   }).ready(function () {
     this.resumecard({
-      seconds: 42,
+      time: 42,
     });
   });
   </script>
